# daily-brief-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  formatter.py  generator.py  main.py  slack_client.py
src/news/: __init__.py  base.py  fetcher.py  korean.py  ranking.py  social.py  tech.py  world.py
